# RayDrone

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Objects/: GameObject.h  template_class.cpp  template_class.h
Objects/Drone/: controller.cpp  controller.h  mahony.cpp  mahony.h  motors.cpp  motors.h  quadcopter.cpp  quadcopter.h  vIMU.cpp  vIMU.h
Objects/HUD/: HUD.cpp  HUD.h
Objects/MainCamera/: main_camera.cpp  main_camera.h
Objects/VGamepad/: VGamepad.cpp  VGamepad.h
Objects/World/: Gworld.cpp  Gworld.h
Tools/: InputSystem.cpp  InputSystem.h  MyVector.cpp  MyVector.h  quaternion.cpp  quaternion.h
